--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
           <link rel="stylesheet" href="style.css">
-
+          <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
           <script type="text/javascript">
             function validateForm()
             {
