--- a/generic.html
+++ b/generic.html
@@ -1,6 +1,7 @@
 <HTML>
     <HEAD>
         <title>Generic Page</title>
+        <link rel="shortcut icon" href="">
     </HEAD>
     <BODY>
         <p>Giavinh Lam</p>
