--- a/generic.html
+++ b/generic.html
@@ -1,7 +1,7 @@
 <HTML>
     <HEAD>
         <title>Generic Page</title>
-        <link rel="shortcut icon" href="">
+        <link rel="shortcut icon" href="favicon.ico">
     </HEAD>
     <BODY>
         <p>Giavinh Lam</p>
