--- a/loggedin.html
+++ b/loggedin.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Socket.IO chat</title>
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
-    <!-- <script type="text/javascript" src="js/socket.io.js"></script> -->
+
     <script>var loaded = 1;</script> <!-- originally had loggedin.html standalone (not on server) -->
     <!-- <script src="http://localhost:8080/socket.io/socket.io.js" onload="loaded=1"></script> -->
+    <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       var user, pass, anonName = 0;
