--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
           <!-- autocomplete -->
           <div class="header">
               <a href="index.html"><h1><span class="infernotext"> Chat </span> Client</h1></a>
-              <form class="form-inline" style="padding-top: 1em;" action="127.0.0.1:8080/database" method="post">
+              <!-- action="127.0.0.1:8080/database" method="post"-->
+              <form class="form-inline" style="padding-top: 1em;" action="loggedin.html" method="get">
                 <div class="form-group">
                   <label for="user">Username:</label>
                   <input type="text" class="form-control" id="user" name="user" disabled>
