--- a/loggedin.html
+++ b/loggedin.html
@@ -9,11 +9,10 @@
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       var user, pass, anonName = 0;
-         // var socket = io();
-      if (loaded == 1)
-      {
+      // if (loaded == 1)
+      // {
         var socket = io.connect('http://localhost:8080');
-      }
+      // }
           
         $(function () {
           /*
