--- a/loggedin.html
+++ b/loggedin.html
@@ -95,7 +95,7 @@
           if (loaded == 0)
           {
             alert("Connection failed, the server may not be running. Please try again.");
-            window.location.href = "index.html";
+            window.location.href = "/index.html";
           }
         }
         checkConnection();
