password matching, modularization setup

--- a/loggedin.html
+++ b/loggedin.html
@@ -11,8 +11,8 @@
       var user, pass, anonName = 0;
       // if (loaded == 1)
       // {
-        // var socket = io.connect('http://localhost:8080');
-        var socket = io.connect('https://obscure-harbor-66476.herokuapp.com');
+        var socket = io.connect('http://localhost:8080');
+        // var socket = io.connect('https://obscure-harbor-66476.herokuapp.com');
       // }
           
         $(function () {
