--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="menu"></div>
           <div class="menuReal">
             <i class="fa fa-users" style="font-size:36px; padding-bottom: 0.5em;"></i>
-           <form id="signupForm" onsubmit="return validateForm()"action="loggedin.html">
+           <form id="signupForm" onsubmit="return validateForm()"action="signup" method="post">
               <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                 <input id="username" type="text" class="form-control" name="username" placeholder="Username" required>
