--- a/loggedin.html
+++ b/loggedin.html
@@ -9,8 +9,8 @@
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       var user, pass, anonName = 0;
-      var socket = io.connect('http://localhost:8080');
-        // var socket = io.connect('https://obscure-harbor-66476.herokuapp.com');
+      //var socket = io.connect('http://localhost:8080'); //testing on local machine
+      var socket = io.connect('https://obscure-harbor-66476.herokuapp.com'); //deployment server
           
         $(function () {
             $('form').submit(function(){
