responsive design changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div id="warning" class="alert alert-warning" style="position: absolute; width: 100%; bottom: 20; z-index: 100; display: none;">
             <strong>Passwords do not match!</strong> Please try again.
           </div>
-          
+
           <h2>Sign Up</h2>
           <div class="menu"></div>
           <div class="menuReal">
@@ -93,7 +93,7 @@
 
           <div class="anonymous">
             <a href="loggedin.html"><i class="fa fa-lock" style="font-size:36px; display: inline-block; padding-right: 15px; line-height: 50px;"></i></a>
-            <a href="loggedin.html"><p>Login anonymously.</p></a>
+            <a href="loggedin.html"><p class="anonymousText">Login anonymously.</p></a>
           </div>
 
           <div class="footer">
