--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
 
           <div class="header">
-            <a href="index.html"><h1><span class="infernotext"> Chat </span> Client</h1></a>
+            <a href="/"><h1><span class="infernotext"> Chat </span> Client</h1></a>
             <form class="form-inline" style="padding-top: 1em;" action="database" method="post">
               <div class="form-group">
                 <label for="user">Username:</label>
